# safeteleoperation

./: 1project.launch  ProjectHome.md  dis-project-dist.launch  dis-project-gate.launch  dis-project-gate.launch.save  dis-project-grad.launch  no-project.launch  project-gate.launch  project-grad.launch  project.launch
distance_map/: CMakeLists.txt  manifest.xml
distance_map/src/: distance_map.cpp  distance_map_generator.cpp
gradient_map/msg/: GradientMap.msg
gradient_map/msg_gen/lisp/: GradientMap.lisp  gradient_map-msg.asd
gradient_map/src/: gradient_map_generator.cpp
joy/msg_gen/lisp/: Joy.lisp
libjoyrumble-v0.1.3/: Makefile  freebasic-example.bas  gcc-example.c  libjoyrumble.c
occupancy_map/: CMakeLists.txt  mainpage.dox  manifest.xml
occupancy_map/msg/: OccupancyMap.msg
occupancy_map/src/: occupancy_map.cpp  occupancy_map_generator.cpp
qtviewer/: CMakeLists.txt  Makefile  cmake_install.cmake  manifest.xml  mappa.moc  rosnode.moc
qtviewer/launch/: project.launch
qtviewer/src/: distance_map.cpp  distance_map.h  finestra.cpp  finestra.h  gradient_map.cpp  gradient_map.h  main.cpp  mappa.cpp  mappa.h  occupancy_map.cpp  occupancy_map.h  rosnode.cpp  rosnode.h  trajectory_map.h
safe_teleop/: manifest.xml
safe_teleop/DIS/: dis-1.world  dis-1.yaml
safe_teleop/msg/: TrajectoryMap.msg
safe_teleop/src/: safe_gate.cpp  safe_teleop.cpp  safe_teleop_distance.cpp
teleop_joy/: joystick.launch  manifest.xml
teleop_joy/src/: teleop_joy.cpp
trunk/: 1project.launch  dis-project-dist.launch  dis-project-gate.launch  dis-project-grad.launch  no-project.launch  project-dist.launch  project.launch  qtviewer
trunk/distance_map/: CMakeLists.txt  mainpage.dox
trunk/distance_map/src/: distanceMap.cpp  distance_map.cpp  (+1 more)
trunk/gradient_map/: CMakeLists.txt  mainpage.dox  manifest.xml
trunk/joy/: manifest.xml
trunk/libjoyrumble-v0.1.3/: bash-example  build  gcc-example.c
trunk/occupancy_map/: CMakeLists.txt
trunk/qtviewer/: CMakeCache.txt  CMakeLists.txt  cmake_install.cmake  mainpage.dox  manifest.xml  mappa.moc  rosnode.moc
trunk/qtviewer/src/: distance_map.cpp  distance_map.h  gradient_map.cpp  gradient_map.h  main.cpp  mappa.cpp  mappa.h  occupancy_map.cpp  occupancy_map.h  rosnode.cpp  rosnode.h  settings.h  trajectory_map.cpp
trunk/safe_teleop/: CMakeLists.txt  mainpage.dox  manifest.xml
trunk/teleop_joy/: CMakeLists.txt  Makefile  joystick.launch  mainpage.dox
(+15 files in other folders)
